--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML basic tags">
+    <meta name="author" content="SC Cruz">
+
+
     <link rel="icon" href="../assets/enha.jpg" type="image/jpg">
     <link rel="stylesheet" href="style.css">
     <title>A Guide to Enhypen</title>
@@ -14,23 +18,27 @@
 
 <body>
     <div class="top-boxes">
+        
         <div class="box">
-        <a href="/public/new_page.html">i-Land Life</a>  
+            <a href="../index.html">Home</a>  
         </div>
+
+        <div class="box">
+        <a href="./public/new_page.html">i-Land Life</a>  
+        </div>
+
         <div class="box">
          <a href="https://en.wikipedia.org/wiki/Enhypen">Members</a>  
-
         </div>
+
         <div class="box">
-
-                    <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
-
+        <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
         </div>
+
         <div class="box">
-
-                    <a href="https://en.wikipedia.org/wiki/Enhypen">Achievements</a>  
-
+        <a href="https://en.wikipedia.org/wiki/Enhypen">Achievements</a>  
         </div>
+        
     </div>
 
     <img src="https://lh3.googleusercontent.com/czCEhlYb2z-NLTwSReMhLXc1s7yQ00EuN9YaeldwvLcmdgiHBEwEcvLQrnTe73jhiiHQFrtpv8NhZ-I=w2880-h1200-p-l90-rj" alt="Enhypen" class="center-image">
