--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -38,16 +38,25 @@
         <div class="box">
         <a href="https://en.wikipedia.org/wiki/Enhypen">Achievements</a>  
         </div>
-        
+
     </div>
 
     <img src="https://lh3.googleusercontent.com/czCEhlYb2z-NLTwSReMhLXc1s7yQ00EuN9YaeldwvLcmdgiHBEwEcvLQrnTe73jhiiHQFrtpv8NhZ-I=w2880-h1200-p-l90-rj" alt="Enhypen" class="center-image">
 
+
+    <section>
     <h1>A Guide to Enhypen</h1>
     <p> 
         Enhypen (Korean: 엔하이픈; stylized as ENHYPEN) is a South Korean boy band formed in 2020 through the survival competition show I-LAND, jointly produced by CJ ENM and Big Hit Entertainment. The group consists of seven members: Jungwon, Heeseung, Jay, Jake, Sunghoon, Sunoo, and Ni-ki.
         Find out more by clicking the tabs above!
     </p>
+    </section>
+
 </body>
+
+<footer>
+   &copy; @SC Cruz, 1st Graded Exercises on a guide to Enhypen
+</footer>
+
 
 </html>
