--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -37,8 +37,8 @@
 
     <h1>A Guide to Enhypen</h1>
     <p> 
-        Enhypen (Korean: 엔하이픈; stylized as ENHYPEN) is a South Korean boy band formed in 2020 through the survival competition show I-LAND, jointly produced by CJ ENM and Big Hit Entertainment. The group consists of seven members: Jungwon, Heeseung, Jay, Jake, Sunghoon, Sunoo, and Ni-ki.
-        Find out more by clicking the tabs above!
+        Enhypen (엔하이픈) is a South Korean boy band formed in 2020 through the survival competition show I-LAND, jointly produced by CJ ENM and Big Hit Entertainment. The group consists of seven members: Jungwon, Heeseung, Jay, Jake, Sunghoon, Sunoo, and Ni-ki.
+        Find out more by clicking the tabs above! 
     </p>
 </body>
 
