--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="box">
-        <a href="./public/new_page.html">i-Land Life</a>  
+        <a href="/public/i-land_page.html">i-Land Life</a>  
         </div>
 
         <div class="box">
