--- a/public/i-land_page.html
+++ b/public/i-land_page.html
@@ -1,3 +1,7 @@
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
+
 <h1> I-Land Life</h1>
 
 <p>I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST</p>
