--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -17,14 +17,17 @@
 </head>
 
 <body>
-    <div class="top-boxes">
+
+        <img src="https://phinf.wevpstatic.net/MjAyNTA1MTRfMjc5/MDAxNzQ3MjI4NDc5NDcw.-HYXJM6KTJ74RJOw1EYqsJWS7zTI9NvTyPLncs_cGyog._YxQLsNJLQWJ7DxdbzCxCyB44ekQWmfcvtbLjvodVeYg.JPEG/67a22ee2-fdd9-4bc4-a360-59c30482392f.jpeg" alt="Enhypen" class="center-image">
+<header>
+         <div class="top-boxes">
         
         <div class="box">
             <a href="../index.html">Home</a>  
         </div>
 
         <div class="box">
-        <a href="/public/i-land_page.html?v=2">i-Land Life</a>  
+        <a href="/public/i-land_page.html">i-Land Life</a>  
         </div>
 
         <div class="box">
@@ -40,8 +43,8 @@
         </div>
 
     </div>
+</header>
 
-    <img src="https://lh3.googleusercontent.com/czCEhlYb2z-NLTwSReMhLXc1s7yQ00EuN9YaeldwvLcmdgiHBEwEcvLQrnTe73jhiiHQFrtpv8NhZ-I=w2880-h1200-p-l90-rj" alt="Enhypen" class="center-image">
 
 
     <section>
