--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -43,6 +43,8 @@
         </div>
 
     </div>
+
+    <img src="../assets/enha.jpg" alt="Enhypen Logo" class="header-image">
 </header>
 
 
@@ -52,7 +54,11 @@
     <p> 
         Enhypen (엔하이픈) is a South Korean boy band formed in 2020 through the survival competition show I-LAND, jointly produced by CJ ENM and Big Hit Entertainment. The group consists of seven members: Jungwon, Heeseung, Jay, Jake, Sunghoon, Sunoo, and Ni-ki.
         Find out more by clicking the tabs above! 
+
+        Their fandom name is **ENGENE**, which is derived from the words “engine” and “gene.”  
+
     </p>
+ 
     </section>
 
 </body>
