--- a/public/main_page.html
+++ b/public/main_page.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="box">
-        <a href="/public/i-land_page.html">i-Land Life</a>  
+        <a href="./public/main_page.html">i-Land Life</a>  
         </div>
 
         <div class="box">
