--- a/public/2Q1GMagnesiumCruz2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz2Q1GMagnesiumCruz.html
@@ -2,6 +2,40 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
 
+<header>
+         <div class="top-boxes">
+        
+        <div class="box">
+            <a href="../index.html">Home</a>  
+        </div>
+
+        <div class="box">
+        <a href="/public/i-land_page.html">i-Land Life</a>  
+        </div>
+
+        <div class="box">
+         <a href="https://en.wikipedia.org/wiki/Enhypen">Members</a>  
+        </div>
+
+        <div class="box">
+        <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
+        </div>
+
+        <div class="box">
+        <a href="https://en.wikipedia.org/wiki/Enhypen">Achievements</a>  
+        </div>
+
+    </div>
+
+    <img src="../assets/enha.jpg" alt="Enhypen Logo" class="header-image">
+</header>
+
+
+
+
+
+
+
 <h1> I-Land Life</h1>
 
 <p>I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST</p>
