--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -10,12 +10,14 @@
         </div>
 
         <div class="box">
-        <a href="/public/i-land_page.html">i-Land Life</a>  
+         <a href="./public/main_page.html">Main </a>  
         </div>
 
         <div class="box">
-         <a href="https://en.wikipedia.org/wiki/Enhypen">Members</a>  
+        <a href="hi">i-Land Life</a>  
         </div>
+
+     
 
         <div class="box">
         <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
