--- a/public/main_page.html
+++ b/public/main_page.html
@@ -27,12 +27,13 @@
         </div>
 
         <div class="box">
-        <a href="./public/main_page.html">i-Land Life</a>  
+         <a href="https://en.wikipedia.org/wiki/Enhypen">Main</a>  
         </div>
 
         <div class="box">
-         <a href="https://en.wikipedia.org/wiki/Enhypen">Members</a>  
+        <a href="./public/main_page.html">i-Land Life</a>  
         </div>
+
 
         <div class="box">
         <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
