--- a/public/main_page.html
+++ b/public/main_page.html
@@ -23,15 +23,15 @@
          <div class="top-boxes">
         
         <div class="box">
-            <a href="../index.html">Home</a>  
+            <a href="../index.html?v=2">Home</a>  
         </div>
 
         <div class="box">
-         <a href="https://en.wikipedia.org/wiki/Enhypen">Main</a>  
+         <a href="/public/main_page.html?v=2">Main</a>  
         </div>
 
         <div class="box">
-        <a href="./public/main_page.html">i-Land Life</a>  
+        <a href="/public/2Q1GMagnesiumCruz.html?v=2">i-Land Life</a>  
         </div>
 
 
