--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -6,15 +6,15 @@
          <div class="top-boxes">
         
         <div class="box">
-            <a href="../index.html">Home</a>  
+            <a href="../index.html?v=2">Home</a>  
         </div>
 
         <div class="box">
-         <a href="./public/main_page.html">Main </a>  
+         <a href="/public/main_page.html?v=2">Main </a>  
         </div>
 
         <div class="box">
-        <a href="hi">i-Land Life</a>  
+        <a href="/public/2Q1GMagnesiumCruz.html">i-Land Life</a>  
         </div>
 
      
