--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -39,10 +39,10 @@
 
 
 <h1> I-Land Life</h1>
-
+<body>
 <p>I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST</p>
 <p>There were 23 contenders, and at the end only 7 were selected to be apart of the group. </p>
-<link rel="stylesheet" href="style_page1.css">
+<link rel="stylesheet" href="style_page1.css?v=2">
 
 
 <div class="image-container">
@@ -52,71 +52,71 @@
     <div class="info">Jay, Korea</div>
   </div>
 
+  
   <div class="hotspot spot2">
     <div class="info">Jungwon, Korea</div>
   </div>
 
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+
+  <div class="hotspot spot4">
+    <div class="info">Taki, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot5">
+    <div class="info">K, Japan</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot6">
+    <div class="info">Ni-Ki, Japan</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot7">
+    <div class="info">Seon, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot8">
+    <div class="info">Jimin, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot9">
+    <div class="info">Jae-beom, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot10">
+    <div class="info">Heeseung, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot11">
+    <div class="info">Geonu, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot12">
+    <div class="info">Kyungmin, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot13">
+    <div class="info">EJ, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot14">
+    <div class="info">Hanbin, Japan</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot15">
+    <div class="info">Daniel, Korea & USA</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot16">
+    <div class="info">Nicholas, Korea</div>
+  <div class="hotspot spot30">
+    <div class="info">Sunghoon, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+
+
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot18">
+    <div class="info">Jake, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot19">
+    <div class="info">Jaeho, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot20">
+    <div class="info">Taeyong, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot21">
+    <div class="info">Sunoo, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
+  <div class="hotspot spot22">
+    <div class="info">Sungchul, Korea</div>
   </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
-  </div>
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
-  </div>
-</div>
+
+
+</body>
