--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -10,11 +10,11 @@
         </div>
 
         <div class="box">
-         <a href="/public/main_page.html?v=2">Main </a>  
+         <a href="./public/main_page.html?v=2">Main </a>  
         </div>
 
         <div class="box">
-        <a href="/public/2Q1GMagnesiumCruz.html">i-Land Life</a>  
+        <a href="./public/2Q1GMagnesiumCruz.html">i-Land Life</a>  
         </div>
 
      
@@ -40,8 +40,7 @@
 
 <h1> I-Land Life</h1>
 <body>
-<p>I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST</p>
-<p>There were 23 contenders, and at the end only 7 were selected to be apart of the group. </p>
+<p class ="first_text">I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST. There were 23 contenders, and at the end only 7 were selected to be apart of the group. </p>
 <link rel="stylesheet" href="style_page1.css?v=2">
 
 
@@ -99,8 +98,6 @@
   <div class="hotspot spot30">
     <div class="info">Sunghoon, Korea</div>
   </div>
-
-
   </div>
   <div class="hotspot spot18">
     <div class="info">Jake, Korea</div>
