--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -10,11 +10,11 @@
         </div>
 
         <div class="box">
-         <a href="./public/main_page.html?v=2">Main </a>  
+         <a href="main_page.html?v=2">Main </a>  
         </div>
 
         <div class="box">
-        <a href="./public/2Q1GMagnesiumCruz.html">i-Land Life</a>  
+        <a href="2Q1GMagnesiumCruz.html">i-Land Life</a>  
         </div>
 
      
