--- a/public/main_page.html
+++ b/public/main_page.html
@@ -27,11 +27,11 @@
         </div>
 
         <div class="box">
-         <a href="/public/main_page.html?v=2">Main</a>  
+         <a href="main_page.html?v=2">Main</a>  
         </div>
 
         <div class="box">
-        <a href="/public/2Q1GMagnesiumCruz.html?v=2">i-Land Life</a>  
+        <a href="2Q1GMagnesiumCruz.html?v=2">i-Land Life</a>  
         </div>
 
 
