--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -48,7 +48,7 @@
   <img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-007-77.jpg?v=1739891194" alt="23 Competitors for I-Land" class="i-land-image">
   <!--all hovering heads format -->
   <div class="hotspot spot1">
-    <div class="info">Jay, Korea</div>
+    <div class="info">Jay, Korea & USA</div>
   </div>
 
   
