--- a/public/main_page.html
+++ b/public/main_page.html
@@ -64,8 +64,8 @@
 
 </body>
 
-<footer>
-   &copy; @SC Cruz, 1st Graded Exercises on a guide to Enhypen
+<footer class = "footer">
+   SC Cruz, 1st Graded Exercises on a guide to Enhypen
 </footer>
 
 
