--- a/public/main_page.html
+++ b/public/main_page.html
@@ -66,6 +66,36 @@
 
 <footer class = "footer">
    SC Cruz, 1st Graded Exercises on a guide to Enhypen
+
+  <div class="social-icons">
+    <a href="https://www.facebook.com/officialENHYPEN/" target="_blank" class= "facebook">
+      <img src="/assets/5.png" alt="Facebook" />
+    </a>
+    <a href="https://x.com/enhypen_members?lang=en" target="_blank"class= "twitter">
+      <img src="/assets/2.png" alt="Twitter" />
+    </a>
+    <a href="https://www.instagram.com/enhypen/?hl=en" target="_blank">
+      <img src="/assets/s4.png"alt="Instagram" />
+    </a>
+    <a href="https://www.tiktok.com/@enhypen?lang=en" target="_blank">
+      <img src="/assets/4232e45e7b539dd6829f8ae4933634ec-removebg-preview.png" alt="TikTok" />
+    </a>
+    <a href = "https://www.youtube.com/channel/UCArLZtok93cO5R9RI4_Y5Jw" target="_blank">
+      <img src="/assets/youtube-removebg-preview.png" alt="YouTube" />
+    </a>
+    <a href="https://open.spotify.com/artist/5t5FqBwTcgKTaWmfEbwQY9?trackId=5V0BIjKnVh2acWHuf5evww" target="_blank">
+      <img src="/assets/spotify-removebg-preview.png" alt="Spotify" />
+    </a>
+    <a href="https://weverse.io/enhypen/feed?hl=ko" target="_blank">
+      <img src="/assets/weverse-removebg-preview.png" alt="WeVerse" />
+    </a>
+
+
+
+  </div>
+</footer>
+
+
 </footer>
 
 
