--- a/public/main_page.html
+++ b/public/main_page.html
@@ -65,7 +65,13 @@
 </body>
 
 <footer class = "footer">
-   SC Cruz, 1st Graded Exercises on a guide to Enhypen
+   <div class="footer-left">
+    A Guide to Enhypen
+  </div>
+
+  <div class="footer-right">
+    © 2025 Enhypen Fan Project by SC Cruz, C Dela Rosa, TA Sy, & AB Vargas
+  </div>
 
   <div class="social-icons">
     <a href="https://www.facebook.com/officialENHYPEN/" target="_blank" class= "facebook">
@@ -75,19 +81,19 @@
       <img src="/assets/2.png" alt="Twitter" />
     </a>
     <a href="https://www.instagram.com/enhypen/?hl=en" target="_blank">
-      <img src="/assets/s4.png"alt="Instagram" />
+      <img src="/assets/4.png"alt="Instagram" />
     </a>
     <a href="https://www.tiktok.com/@enhypen?lang=en" target="_blank">
-      <img src="/assets/4232e45e7b539dd6829f8ae4933634ec-removebg-preview.png" alt="TikTok" />
+      <img src="/assets/social media.png" alt="TikTok" />
     </a>
     <a href = "https://www.youtube.com/channel/UCArLZtok93cO5R9RI4_Y5Jw" target="_blank">
-      <img src="/assets/youtube-removebg-preview.png" alt="YouTube" />
+      <img src="/assets/1.png" alt="YouTube" />
     </a>
     <a href="https://open.spotify.com/artist/5t5FqBwTcgKTaWmfEbwQY9?trackId=5V0BIjKnVh2acWHuf5evww" target="_blank">
-      <img src="/assets/spotify-removebg-preview.png" alt="Spotify" />
+      <img src="/assets/3.png" alt="Spotify" />
     </a>
     <a href="https://weverse.io/enhypen/feed?hl=ko" target="_blank">
-      <img src="/assets/weverse-removebg-preview.png" alt="WeVerse" />
+      <img src="/assets/6.png" alt="WeVerse" />
     </a>
 
 
