--- a/public/main_page.html
+++ b/public/main_page.html
@@ -75,25 +75,25 @@
 
   <div class="social-icons">
     <a href="https://www.facebook.com/officialENHYPEN/" target="_blank" class= "facebook">
-      <img src="../assets/5.png?v=3" alt="Facebook" />
+      <img src="../assets/5.png" alt="Facebook" />
     </a>
     <a href="https://x.com/enhypen_members?lang=en" target="_blank"class= "twitter">
-      <img src="../assets/2.png?v=3" alt="Twitter" />
+      <img src="../assets/2.png" alt="Twitter" />
     </a>
     <a href="https://www.instagram.com/enhypen/?hl=en" target="_blank">
-      <img src="../assets/4.png?v=3"alt="Instagram" />
+      <img src="../assets/4.png"alt="Instagram" />
     </a>
     <a href="https://www.tiktok.com/@enhypen?lang=en" target="_blank">
-      <img src="../assets/social media.png?v=3" alt="TikTok" />
+      <img src="../assets/social media.png" alt="TikTok" />
     </a>
     <a href = "https://www.youtube.com/channel/UCArLZtok93cO5R9RI4_Y5Jw" target="_blank">
-      <img src="../assets/1.png?v=3" alt="YouTube" />
+      <img src="../assets/1.png" alt="YouTube" />
     </a>
     <a href="https://open.spotify.com/artist/5t5FqBwTcgKTaWmfEbwQY9?trackId=5V0BIjKnVh2acWHuf5evww" target="_blank">
-      <img src="../assets/3.png?v=3" alt="Spotify" />
+      <img src="../assets/3.png" alt="Spotify" />
     </a>
     <a href="https://weverse.io/enhypen/feed?hl=ko" target="_blank">
-      <img src="../assets/6.png?v=3" alt="WeVerse" />
+      <img src="../assets/6.png" alt="WeVerse" />
     </a>
 
 
