--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -1,4 +1,27 @@
-   <link rel="preconnect" href="https://fonts.googleapis.com">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="HTML basic tags">
+    <meta name="author" content="SC Cruz">
+
+
+    <link rel="icon" href="../assets/enha.jpg" type="image/jpg">
+    <link rel="stylesheet" href="style.css">
+    <title>A Guide to Enhypen</title>
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
+</head>
+
+<body>
+
+<img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-001-77.jpg?v=1739891194" alt="Enhypen" class="center-image">
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
 
@@ -32,88 +55,7 @@
     <img src="../assets/enha.jpg" alt="Enhypen Logo" class="header-image">
 </header>
 
-
-
-
-
-
-
-<h1> I-Land Life</h1>
-<body>
-<p class ="first_text">I-Land is a reality TV show with the goal of creating a boy group. It was created by Belift Lab which was a joint venture between CJ ENM and Big Hit Entertainment. This show premiered on June 26, 2020 and set out new episodes every Friday at 11 p.m. KST. There were 23 contenders, and at the end only 7 were selected to be apart of the group. </p>
-<link rel="stylesheet" href="style_page1.css?v=2">
-
-
-<div class="image-container">
-  <img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-007-77.jpg?v=1739891194" alt="23 Competitors for I-Land" class="i-land-image">
-  <!--all hovering heads format -->
-  <div class="hotspot spot1">
-    <div class="info">Jay, Korea & USA</div>
-  </div>
-
+<section>
+    <h1>I-Land Life</h1>
   
-  <div class="hotspot spot2">
-    <div class="info">Jungwon, Korea</div>
-  </div>
-
-
-  <div class="hotspot spot4">
-    <div class="info">Taki, Korea</div>
-  </div>
-  <div class="hotspot spot5">
-    <div class="info">K, Japan</div>
-  </div>
-  <div class="hotspot spot6">
-    <div class="info">Ni-Ki, Japan</div>
-  </div>
-  <div class="hotspot spot7">
-    <div class="info">Seon, Korea</div>
-  </div>
-  <div class="hotspot spot8">
-    <div class="info">Jimin, Korea</div>
-  </div>
-  <div class="hotspot spot9">
-    <div class="info">Jae-beom, Korea</div>
-  </div>
-  <div class="hotspot spot10">
-    <div class="info">Heeseung, Korea</div>
-  </div>
-  <div class="hotspot spot11">
-    <div class="info">Geonu, Korea</div>
-  </div>
-  <div class="hotspot spot12">
-    <div class="info">Kyungmin, Korea</div>
-  </div>
-  <div class="hotspot spot13">
-    <div class="info">EJ, Korea</div>
-  </div>
-  <div class="hotspot spot14">
-    <div class="info">Hanbin, Japan</div>
-  </div>
-  <div class="hotspot spot15">
-    <div class="info">Daniel, Korea & USA</div>
-  </div>
-  <div class="hotspot spot16">
-    <div class="info">Nicholas, Korea</div>
-  <div class="hotspot spot30">
-    <div class="info">Sunghoon, Korea</div>
-  </div>
-  </div>
-  <div class="hotspot spot18">
-    <div class="info">Jake, Korea</div>
-  </div>
-  <div class="hotspot spot19">
-    <div class="info">Jaeho, Korea</div>
-  </div>
-  <div class="hotspot spot20">
-    <div class="info">Taeyong, Korea</div>
-  </div>
-  <div class="hotspot spot21">
-    <div class="info">Sunoo, Korea</div>
-  </div>
-  <div class="hotspot spot22">
-    <div class="info">Sungchul, Korea</div>
-  </div>
-
-
-</body>
+    </section>
