--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -8,7 +8,7 @@
 
 
     <link rel="icon" href="../assets/enha.jpg" type="image/jpg">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style_page1.css">
     <title>A Guide to Enhypen</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -59,3 +59,8 @@
     <h1>I-Land Life</h1>
   
     </section>
+
+<section>
+
+  
+</section>
