--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -1,29 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="HTML basic tags">
-    <meta name="author" content="SC Cruz">
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta name="keywords" content="HTML basic tags">
+<meta name="author" content="SC Cruz">
 
 
-    <link rel="icon" href="../assets/enha.jpg" type="image/jpg">
-    <link rel="stylesheet" href="style_page1.css">
-    <title>A Guide to Enhypen</title>
+<link rel="icon" href="../assets/enha.jpg" type="image/jpg">
+<link rel="stylesheet" href="styler.css">
+<title>A Guide to Enhypen</title>
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
 </head>
-
-<body>
-
-<img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-001-77.jpg?v=1739891194" alt="Enhypen" class="center-image">
-
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&family=SUSE+Mono:ital,wght@0,100..800;1,100..800&family=Tagesschrift&display=swap" rel="stylesheet">
 
 <header>
          <div class="top-boxes">
@@ -33,21 +24,19 @@
         </div>
 
         <div class="box">
-         <a href="main_page.html?v=2">Main </a>  
+         <a href="https://abivrgs.github.io/2QRepositoryMgVARGAS/public/2Q1MgVargas.html">Main </a>  
         </div>
 
         <div class="box">
         <a href="2Q1GMagnesiumCruz.html">i-Land Life</a>  
         </div>
 
-     
-
         <div class="box">
-        <a href="https://en.wikipedia.org/wiki/Enhypen">Lore to Songs & Albums</a>  
+        <a href="https://sytherese.github.io/2QPortfolioMgSY/">Lore to Songs & Albums</a>  
         </div>
 
         <div class="box">
-        <a href="https://en.wikipedia.org/wiki/Enhypen">Achievements</a>  
+        <a href="https://cgdelarosa.github.io/2QRepositoryMgDELAROSA/public/2Q1MgDelaRosa.html">Achievements</a>  
         </div>
 
     </div>
@@ -55,9 +44,10 @@
     <img src="../assets/enha.jpg" alt="Enhypen Logo" class="header-image">
 </header>
 
+<body>
 <section>
-    <h1>I-Land Survival Show</h1>
-  
+<img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-001-77.jpg?v=1739891194" alt="Enhypen" class="center-image">
+<h1> I-Land Survival Show </h1>
 </section>
 
 <section>
@@ -91,9 +81,8 @@
   </table>
 </section>
 
-
 <section>
-<h2> Contestants </h2>
+    <h2> Contestants </h2>
 
 <p class ="text"> Find Out Their Names By Hovering Over Their Faces!</p>
 
@@ -165,13 +154,13 @@
   <div class="hotspot spot22">
     <div class="info">Sungchul, Korea</div>
   </div>
-
-
-</body>
+</section>
 
 <section>
 
     <h3> MISSONS - EPISODES</h3>
+    <p class = "text2">Access the show <a href="https://www.youtube.com/watch?v=iIWeza53gUE&list=PLyySfhXeCd7o-aak-EUohCOF-XAMmXrnY">here!</a></p>
+
 
 <section class="iland-summary">
 
@@ -336,7 +325,6 @@
 
 
 </section>
-
 <footer>
   <h2>Δ GUIDE TO ENHYPEN</h2>
   <div class="social-icons">
@@ -348,6 +336,13 @@
     <a href="https://open.spotify.com/artist/5t5FqBwTcgKTaWmfEbwQY9" target="_blank"><img src="../assets/3.png" alt="Spotify"></a>
     <a href="https://weverse.io/enhypen/feed?hl=ko" target="_blank"><img src="../assets/6.png" alt="WeVerse"></a>
   </div>
-  <p>© 2025 Enhypen AB Vargas</p>
+  <p>© 2025 A Guide to Enhypen | SC Cruz</p>
+  <br>
+  <p><a href = "https://docs.google.com/document/d/1wbevUFed2eJeZydhKWUlF1lgyDqB31vl_mdwRN7HHgw/edit?usp=sharing"> Sources</a></p>
+
 </footer>
 </body>
+
+ 
+</body>
+</html>
