--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="box">
-        <a href="https://sytherese.github.io/2QPortfolioMgSY/">Lore to Songs & Albums</a>  
+        <a href="https://sytherese.github.io/2QPortfolioMgSY/public/2Q1MgSy.html">Lore to Songs & Albums</a>  
         </div>
 
         <div class="box">
