--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <ul>
             
         <li><a href="./public/2Q1GMagnesiumCruz.html" > First Graded</a> </li>
+        <li><a href="./public/Q21NGMagnesiumCruz.html"> First Non-Graded</a></li>
         <li><a href="#" > Second Graded</a></li>
         <li><a href="#" > Third Graded</a></li>
         <li><a href="#" > Access to Our Project</a></li>
