--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="box">
-        <a href="https://sytherese.github.io/2QPortfolioMgSY/public/2Q1MgSy.html">Lore to Songs & Albums</a>  
+        <a href="https://sytherese.github.io/2QPortfolioMgSY/public/2Q1MgSy.html">Lore to Songs/Albums</a>  
         </div>
 
         <div class="box">
@@ -50,6 +50,7 @@
 <img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-001-77.jpg?v=1739891194" alt="Enhypen" class="center-image">
 <h1> I-Land Survival Show </h1>
 </section>
+
 
 <section>
   <img src = "https://i.pinimg.com/1200x/18/f8/cb/18f8cb5dd9e551bf8d06122ba6ab457b.jpg" alt="I-LAND" class="poster">
@@ -88,7 +89,7 @@
 
 
   <div class="image-container">
-  <img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-007-77.jpg?v=1739891194" alt="23 Competitors for I-Land" class="i-land-image">
+  <img src="https://web-cf-image.cjenm.com/resize/1344x756/public/share/metamng/programs/iland-entertainmentshow-ko-007-77.jpg?v=1739891194" alt="23 Competitors for I-Land" class="iland_image">
   
   <!--all hovering heads format -->
   <div class="hotspot spot1">
