--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -159,6 +159,7 @@
 </section>
 
 <style>
+/*hovering heads section*/
   
 section {
   position: relative;
@@ -166,6 +167,7 @@ section {
   height: auto;
 }
 
+/*general hotspot settings*/
 .hotspot {
   position: absolute;
   width: 4vw;
@@ -217,6 +219,8 @@ section {
   border-style: solid;
   border-color: rgba(255, 255, 255, 0.1) transparent transparent transparent;
 }
+
+/*every single contestant's head*/
 
 .spot1 { top: 71%; left: 75%; }
 .spot2 { top: 70%; left: 79%; }
