--- a/public/2Q1GMagnesiumCruz.html
+++ b/public/2Q1GMagnesiumCruz.html
@@ -251,7 +251,7 @@ section {
 <section>
 
 <h3> MISSONS - EPISODES</h3>
-<p class = "text2">Access the show <a href="https://www.youtube.com/watch?v=iIWeza53gUE&list=PLyySfhXeCd7o-aak-EUohCOF-XAMmXrnY">here!</a></p>
+<p class = "text2">Access the show <a href="https://www.youtube.com/watch?v=eKlnld191t8&list=PLjUVzlcpeN4QMP736JoCCIJz4EYF8Tl3n">here!</a></p>
 
 
 <section class="iland-summary">
@@ -414,6 +414,34 @@ section {
 </section>
 
 </section>
+
+<section class="video-section">
+  <h4>Check out these videos!</h4>
+
+  <div class="video-container">
+    <div class="video-item">
+      <iframe src="https://www.youtube.com/embed/kmkXyWymFBU?si=WMKbNh6YMiJJ6hm6"
+        title="I-LAND Final Performance"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      <p class="video-caption">I-LAND Final Performance</p>
+    </div>
+
+    <div class="video-item">
+      <iframe src="https://www.youtube.com/embed/bvgeWpHZZSA?si=G2amuqfqLjJwegZ3"
+        title="ENHYPEN Members Announced"
+        frameborder="0"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        allowfullscreen>
+      </iframe>
+      <p class="video-caption">ENHYPEN Members Announced</p>
+    </div>
+  </div>
+</section>
+
+
 
 <footer>
   <h2>Δ GUIDE TO ENHYPEN</h2>
