--- a/index.html
+++ b/index.html
@@ -26,16 +26,16 @@
 <body>
 
     <div>
-        <img src = "https://i.pinimg.com/1200x/5b/6e/2d/5b6e2deaa648d0341d4f1c91040436b2.jpg" alt="pshs logo" title= "The Official Logo" height="50px" width = "50px"class ="header"> 
+        <img src = "https://www.miramax.com/assets/amelie_ks_14_000079_lg.jpg" alt="pshs logo" title= "The Official Logo" height="50px" width = "50px"class ="header"> 
         <h1> My Portfolio of my work in the 2nd Qtr</h1>
     </div>
 
     <nav>
         <ul>
             
-        <li><a href="./public/2Q1GMagnesiumCruz.html" > First Graded</a> </li>
+        <li><a href="https://saracaitlyn-cruz11.github.io/2Q_2G_Cruz.DelaRosa.Sy.Vargas/public/2Q1MgCruz.html" > First Graded</a> </li>
         <li><a href="./public/Q21NGMagnesiumCruz.html"> First Non-Graded</a></li>
-        <li><a href="./public/2Q1GMagnesiumCruz.html" > Second Graded</a></li>
+        <li><a href="https://saracaitlyn-cruz11.github.io/2Q_2G_Cruz.DelaRosa.Sy.Vargas/public/2Q1MgCruz.html" > Second Graded</a></li>
         <li><a href="#" > Third Graded</a></li>
         <li><a href="#" > Access to Our Project</a></li>
     
